# gexiv2

./: .clang-format  .gitignore  .gitlab-ci.yml  GExiv2.py  INSTALL  INSTALLING  INSTALLING.md  Makefile  Makefile.am  NEWS  README  README.md  THANKS  autogen.sh  check.am  configure  configure.ac  fetch-docs.sh  gexiv2.doap  gexiv2.m4  gexiv2.pc.in  gexiv2.vapi  meson.build  meson_options.txt  style.css  versions.md
.gitlab-ci/: test-ucrt.sh
.gitlab/issue_templates/: Bug.md  Feature Request.md
.reuse/: dep5
build-aux/: build-error-enum.py  dist-docs.py  i686-w64-mingw32.txt  org.gnome.GExiv2-oldstable.json  org.gnome.GExiv2-stable.json  org.gnome.GExiv2.json  org.gnome.GExiv2.json.in  update-def-file.sh  x86_64-linux-clang.txt  x86_64-w64-mingw32.txt
debian/: changelog  control  copyright  gir1.2-gexiv2-0.10.install  libgexiv2-dev.install  libgexiv2-doc.install  rules  watch
docs/reference/: Makefile.am  gexiv2-docs.xml  gexiv2-sections.txt  gexiv2.toml.in  gexiv2.types  meson.build
docs/reference/xml/: meson.build
gexiv2/: Makefile.am  gexiv2-enums.cpp.template  gexiv2-enums.h.template  gexiv2-error.cpp  gexiv2-gio-io.h  gexiv2-log-private.h  gexiv2-log.cpp  gexiv2-log.h  gexiv2-managed-stream.h  gexiv2-metadata-exif.cpp  gexiv2-metadata-gio.cpp  gexiv2-metadata-gio.h  gexiv2-metadata-gps.cpp  gexiv2-metadata-iptc.cpp  gexiv2-metadata-private.h  gexiv2-metadata-xmp.cpp  gexiv2-metadata.cpp  gexiv2-metadata.h  gexiv2-preview-image-private.h  gexiv2-preview-image.cpp  gexiv2-preview-image.h  gexiv2-preview-properties-private.h  gexiv2-preview-properties.cpp  gexiv2-preview-properties.h  gexiv2-startup.cpp  gexiv2-startup.h  gexiv2-stream-io.cpp  gexiv2-stream-io.h  gexiv2-util-private.h  gexiv2-version.h.meson  gexiv2-version.m4  gexiv2.def  gexiv2.h  gexiv2.map  gexiv2.pc.in  meson.build
subprojects/: exiv2.wrap
test/: gexiv2-copy.vala  gexiv2-dump.vala  gexiv2-regression.c  meson.build  python2-test.in  python3-test.in
test/data/: partial_xml.txt
test/python/: gexiv2.py  gexiv2.py.in  meson.build  test_metadata.py  test_metadata.py.in
tests/: __init__.py  test_metadata.py
tools/: gexiv2-copy.vala  gexiv2-dump.vala  gexiv2-tool.vala  meson.build
vapi/: GExiv2-0.10.metadata  Makefile  gexiv2-custom.vala  gexiv2.excludes  gexiv2.files  gexiv2.metadata  gexiv2.namespace  meson.build
