ent_conf = configuration_data()
ent_conf.set('PACKAGE', 'GExiv2')
ent_conf.set('PACKAGE_BUGREPORT', 'https://gitlab.gnome.org/GNOME/gexiv2/issues/new')
ent_conf.set('PACKAGE_NAME', 'gexiv2')
ent_conf.set('PACKAGE_STRING', 'GExiv2')
ent_conf.set('PACKAGE_TARNAME', 'gexiv2-' + meson.project_version())
ent_conf.set('PACKAGE_URL', 'https://wiki.gnome.org/Projects/gexiv2')
ent_conf.set('PACKAGE_VERSION', meson.project_version())
ent_conf.set('PACKAGE_API_VERSION', '0.10')
configure_file(input: 'gtkdocentities.ent.in', output: 'gtkdocentities.ent', configuration: ent_conf)
