ent_conf = configuration_data()
ent_conf.set('PACKAGE', 'GExiv2')
ent_conf.set('PACKAGE_BUGREPORT', 'https://gitlab.gnome.org/GNOME/gexiv2/issues/new')
ent_conf.set('PACKAGE_NAME', 'gexiv2')
ent_conf.set('PACKAGE_STRING', 'GExiv2 ' + meson.project_version())
ent_conf.set('PACKAGE_TARNAME', 'gexiv2-' + meson.project_version())
ent_conf.set('PACKAGE_URL', project_url)
ent_conf.set('PACKAGE_VERSION', meson.project_version())
ent_conf.set('PACKAGE_API_VERSION', project_api_version)
configure_file(input: 'gtkdocentities.ent.in', output: 'gtkdocentities.ent', configuration: ent_conf)
